--- a/Server/App.config
+++ b/Server/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="Db.Properties.Settings.DatabaseConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database.mdf;Integrated Security=True"
+    <add name="Db.Properties.Settings.DatabaseConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;G:\Pcz\Programowanie windows\Weather\Db\Database.mdf&quot;;Integrated Security=True"
         providerName="System.Data.SqlClient" />
   </connectionStrings>
     <startup> 
