--- a/Weather/App.config
+++ b/Weather/App.config
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Weather.Properties.Settings.DatabaseConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;G:\Pcz\Programowanie windows\Weather\Db\Database.mdf&quot;;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+      <add name="Db.Properties.Settings.DatabaseConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quot;G:\Pcz\Programowanie windows\Weather\Db\Database.mdf&quot;;Integrated Security=True"
+        providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
